--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
     <!-- Use ES Modules for imports -->
     <script type="module">
-        import * as THREE from 'https://cdn.jsdelivr.net/npm/three@0.152.2/build/three.module.js';
-        import { OrbitControls } from 'https://cdn.jsdelivr.net/npm/three@0.152.2/examples/jsm/controls/OrbitControls.js';
+        import * as THREE from 'three';
+        import { OrbitControls } from 'three/examples/jsm/controls/OrbitControls.js';
         import { createEnvironment } from './environment.js';
         import { createRobot } from './robot.js';
         import { MarkovChain, STATES, matrix } from './markov.js';
