--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     </style>
 </head>
 <body>
-    <script async src="https://unpkg.com/es-module-shims@1.8.0/dist/es-module-shims.js"></script>
+    <script async src="https://cdn.jsdelivr.net/npm/es-module-shims@2.0.10/dist/es-module-shims.min.js"></script>
     <script type="importmap">
         {
             "imports": {
-                "three": "https://unpkg.com/three@0.169.0/build/three.module.js",
-                "three/addons/": "https://unpkg.com/three@0.169.0/examples/jsm/"
+                "three": "https://cdn.jsdelivr.net/npm/three@0.175.0/build/three.module.js",
+                "three/addons/": "https://cdn.jsdelivr.net/npm/three@0.175.0/examples/jsm/"
             }
         }
     </script>
